feat : event it test
