# doc/api.yml
@@ -353,7 +353,7 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
-  
+
   '/places/{id}':
     get:
       tags:
@@ -441,7 +441,7 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
-  
+
   '/events/{id}':
     get:
       tags:
@@ -477,11 +477,14 @@ paths:
         - Event
       summary: Get all events order by starting_hours
       parameters:
-        - name: place_id
+        - name: page
           in: query
-          required: false
           schema:
-            type: string
+            $ref: '#/components/schemas/Page'
+        - name: page_size
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
       operationId: getEvents
       responses:
         '200':
@@ -535,7 +538,7 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
-  
+
   '/events/{event_id}/event_participants/{event_participant_id}':
     get:
       tags:
@@ -618,7 +621,45 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
-
+    post:
+      tags:
+        - Event
+      summary: Create new event event_participants
+      parameters:
+        - name: event_id
+          in: path
+          required: true
+          schema:
+            type: string
+      operationId: createEventEventParticipants
+      requestBody:
+        description: Event event participants to create
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/Event'
+      responses:
+        '200':
+          description: Created Event event participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
     put:
       tags:
         - Event
@@ -643,6 +684,50 @@ paths:
       responses:
         '200':
           description: Updated Event event participants
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/EventParticipant'
+        '400':
+          $ref: '#/components/responses/400'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '429':
+          $ref: '#/components/responses/429'
+        '500':
+          $ref: '#/components/responses/500'
+  /event_participants:
+    get:
+      tags:
+        - Event
+      summary: Get all event event_participants filtered by status
+      parameters:
+        - name: status
+          in: query
+          description: "See the event_participants object for its value."
+          schema:
+            type: string
+            default: EXPECTED
+            enum:
+              - EXPECTED
+              - HERE
+              - MISSING
+        - name: page
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+        - name: page_size
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
+      operationId: getEventParticipants
+      responses:
+        '200':
+          description: List of filtered event event_participants
           content:
             application/json:
               schema:
@@ -1307,7 +1392,21 @@ components:
           type: integer
         total_hours:
           type: integer
-
+    CreateEvent:
+      type : object
+      properties :
+        id :
+          type : string
+        eventType :
+          type : string
+        startTime:
+          type : string
+          format : time
+        endTime :
+          type : string
+          format : time
+        id_place :
+          type : string
     CreateCourse:
       type: object
       properties:
