# src/main/java/school/hei/haapi/endpoint/rest/controller/EventController.java
@@ -18,7 +18,7 @@ import java.util.List;
 @RestController
 @Controller
 @AllArgsConstructor
-@RequestMapping("/event")
+@RequestMapping("/events")
 public class EventController {
 
   private final EventService eventService;
@@ -27,9 +27,9 @@ public class EventController {
   @GetMapping
   public List<Event> getAllEvent(
           @RequestParam int page,
-          @RequestParam int pageSize
+          @RequestParam int page_size
   ){
-    return eventService.getAll(page, pageSize);
+    return eventService.getAll(page, page_size);
   }
   @PutMapping
   public List<Event> saveAllEvent(
